# book-translator-demo

./: .env.local.example  .gitignore  CLAUDE.md  eslint.config.js  pyproject.toml
backend/: Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  main.py  prompts.py  schemas.py
backend/app/routers/: __init__.py  health.py  translate.py
backend/app/services/: __init__.py  translator.py
docs/: DEPLOY.md  SCOPE_PROGRESS.md  requirements.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Header.tsx  ImageUploader.tsx  TranslationResult.tsx
frontend/src/pages/: TranslateDemo.tsx  WorkflowExplanation.tsx
frontend/src/theme/: components.ts  index.ts  palette.ts  typography.ts
frontend/src/types/: index.ts
frontend/src/utils/: translateApi.ts
mockups/: design-theme-selector.html
