[project]
name = "kindle-translation-demo"
version = "0.1.0"
description = "Kindle洋書自動翻訳システム デモ版"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "openai>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C90",    # mccabe complexity
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
# Blue Lamp 品質基準: 複雑度10以下
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
